feat: イベント参加の実装
