# docs/swagger.yaml
@@ -109,6 +109,35 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /event/join:
+    post:
+      consumes:
+      - application/json
+      description: Join an event by event ID
+      parameters:
+      - description: Event ID
+        in: query
+        name: event_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Join an event
+      tags:
+      - Event
   /exchanges:
     get:
       consumes:
